--- a/content/classes/NRES803/Week_2/homework_2.html
+++ b/content/classes/NRES803/Week_2/homework_2.html
@@ -22,6 +22,5 @@ weight: 803022
 <blockquote>
 <p>hint: in R you can use the predict function with options newdata and interval=“prediction”. See <code>help(predict.lm)</code>.</p>
 </blockquote>
-<p>Please do the analyses yourself. Do not use the analysis presented in the paper, although you can refer to the paper for the ecological background. I WILL know if you do not do the analysis yourself! Please submit an R Markdown file named “yourlastname_hw_2.Rmd”. You should be able to click the “knit” button in RStudio and have it produce an html file without errors.</p>
+<p>Please do the analyses yourself. Do not use the analysis presented in the paper, although you can refer to the paper for the ecological background. I WILL know if you do not do the analysis yourself! Please submit a compressed file of your RStudio project folder that includes an R Markdown file named “yourlastname_hw_2.Rmd”. You should be able to click the “knit” button in RStudio and have it produce an html file without errors.</p>
 <p>McWilliams, J et al (2005) Accelerating impacts of temperature-induced coral bleaching in the Caribbean. Ecology 86(5):2055-2060.</p>
-<p>Complete Homework and Submit by Midnight Tuesday of week 3.</p>
