Week 8 lab and build site

--- a/content/classes/NRES803/Week_3/lab_4.html
+++ b/content/classes/NRES803/Week_3/lab_4.html
@@ -329,6 +329,6 @@ nd &lt;- expand.grid(Edge = -3:3, Amount = quantile(smithsim$Amount,
     p = c(0, 0.5, 1)), Hetero = median(smithsim$Hetero), MnPatch = median(smithsim$MnPatch))
 nd &lt;- augment(fits[[12]], newdata = nd)
 gg1 + geom_line(aes(y = .fitted, group = Amount), data = nd)</code></pre>
-<p><img src="/classes/NRES803/Week_3/lab_4_files/figure-html/unnamed-chunk-21-1.png" width="672" /></p>
+<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_3/lab_4_files/figure-html/unnamed-chunk-21-1.png" width="672" /></p>
 <p>The color shows the value of amount for each point, a third dimension. The lines are the prediction from the top model, and automatically are colored to match the points so you can see the value of Amount that gives you that prediction. The lines are parallel because there is no interaction term.</p>
 </div>
