--- a/content/classes/NRES803/readiness.html
+++ b/content/classes/NRES803/readiness.html
@@ -12,7 +12,7 @@ weight: 803002
 <h2>Interpreting graphical and statistical output</h2>
 <p>The RIKZ dataset from the textbook has data on species occurence on 9 sandy beaches along the North Sea. Each observation represents a point along a transect perpendicular to the mean low water level. In addition to species richness there are covariates for habitat variables like Height relative to mean low water (NAP), angle of the beach, salinity, temperature and so on.</p>
 <p>Species richness declines with height above mean low water. The solid line is an estimated linear model with Richness as the response and NAP as the covariate. The grey area is the 95% confidence region for the estimated mean response.</p>
-<p><img src="/classes/NRES803/readiness_files/figure-html/plot-1.png" width="672" /></p>
+<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/readiness_files/figure-html/plot-1.png" width="672" /></p>
 <p>The following is the output from the estimated linear model.</p>
 <pre><code>## 
 ## Call:
