--- a/content/classes/NRES803/Week_1/fittinglines_example.html
+++ b/content/classes/NRES803/Week_1/fittinglines_example.html
@@ -15,7 +15,7 @@ y = x
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,3),ylim=c(0,3))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-2-1.png" width="288" /></p>
+<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-2-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## Warning in summary.lm(lm.1): essentially perfect fit: summary may be
 ## unreliable</code></pre>
@@ -37,14 +37,14 @@ abline(lm.1)</code></pre>
 ## Residual standard error: 0 on 1 degrees of freedom
 ## Multiple R-squared:      1,  Adjusted R-squared:      1 
 ## F-statistic:   Inf on 1 and 1 DF,  p-value: &lt; 2.2e-16</code></pre>
-
+<p></p>
 <pre class="r"><code># now make each figure and the corresponding r lm() output
 x = c(1,1,2)
 y = c(1,2,2)
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,3),ylim=c(0,3))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-3-1.png" width="288" /></p>
+<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-3-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## 
 ## Call:
@@ -62,14 +62,14 @@ abline(lm.1)</code></pre>
 ## Residual standard error: 0.7071 on 1 degrees of freedom
 ## Multiple R-squared:   0.25,  Adjusted R-squared:   -0.5 
 ## F-statistic: 0.3333 on 1 and 1 DF,  p-value: 0.6667</code></pre>
-
+<p></p>
 <pre class="r"><code># now make each figure and the corresponding r lm() output
 x = c(1,1,2,2)
 y = c(1,2,1,2)
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,3),ylim=c(0,3))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-4-1.png" width="288" /></p>
+<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-4-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## 
 ## Call:
@@ -87,14 +87,14 @@ abline(lm.1)</code></pre>
 ## Residual standard error: 0.7071 on 2 degrees of freedom
 ## Multiple R-squared:  1.972e-31,  Adjusted R-squared:   -0.5 
 ## F-statistic: 3.944e-31 on 1 and 2 DF,  p-value: 1</code></pre>
-
+<p></p>
 <pre class="r"><code># now make each figure and the corresponding r lm() output
 x = c(1,2,3,3,4,5)
 y = c(2,3,1,3,2,3)
 plot(x,y,xlab=&quot;&quot;,ylab=&quot;&quot;,bty=&quot;n&quot;,xlim=c(0,6),ylim=c(0,4))
 lm.1 = lm(y~x)
 abline(lm.1)</code></pre>
-<p><img src="/classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-5-1.png" width="288" /></p>
+<p><img src="/"https://drewtyre.rbind.io/"  # End your URL with a `/` trailing slash.classes/NRES803/Week_1/fittinglines_example_files/figure-html/unnamed-chunk-5-1.png" width="288" /></p>
 <pre class="r"><code>summary(lm.1)</code></pre>
 <pre><code>## 
 ## Call:
